# mlops-forecasting-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml  update-readme.yml
src/: __init__.py
src/data/: features.py  ingest.py  schemas.py
src/mlops_forecasting_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: baseline.py  evaluate.py  global_model.py  register.py
src/monitoring/: monitor.py
src/serve/: app.py  infer.py  loader.py  main.py
src/tools/: update_readme.py
tests/: test_baseline.py  test_evaluate_register.py  test_features.py  test_global_model.py  test_ingest.py  test_monitoring.py  test_placeholder.py  test_serve.py
